// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ruby_third_parties_bigquery datatype_in_insert 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_bigquery",
      "title": "Sensitive data sent to BigQuery detected.",
      "description": "## Description\\nLeaking sensitive data to third-party data tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to BigQuery.\\n\\n## Remediations\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [BigQuery docs](https://cloud.google.com/ruby/docs)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_bigquery",
      "line_number": 4,
      "full_filename": "/tmp/bearer-scan/datatype_in_insert.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Firstname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 4,
        "end": 4,
        "column": {
          "start": 10,
          "end": 35
        }
      },
      "sink": {
        "start": 7,
        "end": 9,
        "column": {
          "start": 12,
          "end": 4
        },
        "content": "dataset.insert(\\"my_table\\", rows) do |result|\\n  call\\nend"
      },
      "parent_line_number": 7,
      "snippet": "dataset.insert(\\"my_table\\", rows) do |result|\\n  call\\nend",
      "fingerprint": "fa66126708eadfd7a10516ce3578a767_0",
      "old_fingerprint": "d9af778d06f51872dfc83bd618eb08e3_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_bigquery datatype_in_insert_async 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_bigquery",
      "title": "Sensitive data sent to BigQuery detected.",
      "description": "## Description\\nLeaking sensitive data to third-party data tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to BigQuery.\\n\\n## Remediations\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [BigQuery docs](https://cloud.google.com/ruby/docs)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_bigquery",
      "line_number": 8,
      "full_filename": "/tmp/bearer-scan/datatype_in_insert_async.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Firstname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 32,
          "end": 47
        }
      },
      "sink": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 1,
          "end": 51
        },
        "content": "inserter.insert([{ first_name: user.first_name }])"
      },
      "parent_line_number": 8,
      "snippet": "inserter.insert([{ first_name: user.first_name }])",
      "fingerprint": "fa66126708eadfd7a10516ce3578a767_0",
      "old_fingerprint": "2c7ca51c00daf3854b004c70c6cdbbd9_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_bigquery datatype_in_table_insert 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_bigquery",
      "title": "Sensitive data sent to BigQuery detected.",
      "description": "## Description\\nLeaking sensitive data to third-party data tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to BigQuery.\\n\\n## Remediations\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [BigQuery docs](https://cloud.google.com/ruby/docs)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_bigquery",
      "line_number": 5,
      "full_filename": "/tmp/bearer-scan/datatype_in_table_insert.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Firstname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 5,
        "end": 5,
        "column": {
          "start": 10,
          "end": 35
        }
      },
      "sink": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 1,
          "end": 19
        },
        "content": "table.insert(rows)"
      },
      "parent_line_number": 8,
      "snippet": "table.insert(rows)",
      "fingerprint": "fa66126708eadfd7a10516ce3578a767_0",
      "old_fingerprint": "e4080b0d11ae2ff9e59dd231eb2d8fb2_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_bigquery datatype_in_table_insert_async 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "201"
      ],
      "id": "ruby_third_parties_bigquery",
      "title": "Sensitive data sent to BigQuery detected.",
      "description": "## Description\\nLeaking sensitive data to third-party data tools is a common cause of data leaks and can lead to data breaches. This rule looks for instances of sensitive data sent to BigQuery.\\n\\n## Remediations\\nWhen sending data to third-party services, ensure all sensitive data is removed.\\n\\n## Resources\\n- [BigQuery docs](https://cloud.google.com/ruby/docs)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/ruby_third_parties_bigquery",
      "line_number": 9,
      "full_filename": "/tmp/bearer-scan/datatype_in_table_insert_async.rb",
      "filename": ".",
      "data_type": {
        "category_uuid": "14124881-6b92-4fc5-8005-ea7c1c09592e",
        "name": "Firstname"
      },
      "category_groups": [
        "PII",
        "Personal Data"
      ],
      "source": {
        "start": 9,
        "end": 9,
        "column": {
          "start": 10,
          "end": 35
        }
      },
      "sink": {
        "start": 11,
        "end": 11,
        "column": {
          "start": 1,
          "end": 22
        },
        "content": "inserter.insert(rows)"
      },
      "parent_line_number": 11,
      "snippet": "inserter.insert(rows)",
      "fingerprint": "fa66126708eadfd7a10516ce3578a767_0",
      "old_fingerprint": "6c0db10774dd869af5b00e7762e8609a_0"
    }
  ]
}"
`;

exports[`ruby_third_parties_bigquery ok_datatype_ignored 1`] = `"{}"`;

exports[`ruby_third_parties_bigquery ok_no_datatype 1`] = `"{}"`;
